2002-05-09  Jeff Freedman  <jeff@amy.nerble.net>

	* keys.cc,defaultkeys.txt,etc:  DEL key deletes selected objects.
	* cheat.cc (Cheat): Maintain list of selected objects.
	* exult.cc:  Select dropped object/combo.
	* gamewin.cc:  In 'select' mode, clicking an object toggles
	whether it's selected.
	* gamerend.cc:  Show selected objects.

2002-05-09  Ryan Nunn  <triforce@merlin.net.au>
	* files/Table.cc : Namespace
	* exult.cc, windrag.*, xdrag.h, shapes/u7drag.*, mapedit/*.* :
	  Modifications to Win32 DnD. Combo's now work. Also shape and combo
	  foot prints are now shown when dragging.
	* msvcstuff/msvc_kludges.h : Overdue version update
	* msvcstuff/Exult.dsp : Some changes for a special debug build to help
	  find the spaces in path problem.

2002-05-08  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/combo.cc,exult.cc,xdrag.cc: Combos starting to work.
	* mapedit/studio.cc: Added a "Hide lift" spin-button.

2002-05-06  Darke <darkepaw@users.sourceforge.net>
	* files/U7file.cc: Fixed over-paranoid catch()ing.

2002-05-06  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: If map-editing, you can only drag things if in 'Move' mode.

2002-05-03  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/exult_studio.* updated
	* docs/xml/exult_studio.xml updated

2002-05-03  Dominik Reichardt <gigdr@tesionmail.de>
	* tools/*.1: finally added Robert Bihlmeyer man pages. Added them 
	to /tools as the *txt files are there too.

2002-05-01  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* usecode/compiler/uclex.ll,ucmain.cc: Added "-o outfile" option
	and "-I includdir" options.

2002-04-30  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/eggedit.cc: Now sets teleport data1 correctly.
	* objs/egg.cc (Egg_object): When receiving update from EStudio,
	set quality.  Also figure frame in all cases.
	* actors.cc,actorio.cc: Set/read 'assigned_usecode_flag'.
	* actors.cc: Update NPC name from EStudio.

2002-04-27  Jeff Freedman  <jeff@amy.nerble.net>
