@@ -122,7 +122,9 @@ const struct Action {
 	{ "DELETE_OBJECT", 
 	  ActionDeleteObject, "Delete object", true, true, NONE, false },
 	{ "DELETE_SELECTED",
-	  ActionDeleteSelected, "Delete selected", true, true, NONE, false },
+	  ActionDeleteSelected, "Delete selected", true, true, NONE, true },
+	{ "MOVE_SELECTED",
+	  ActionMoveSelected, "Move selected", true, true, NONE, true },
 	{ "TOGGLE_EGGS",
 	  ActionToggleEggs, "Toggle egg display", true, true, NONE, false },
 	{ "TOGGLE_GOD_MODE",
